--- a/public/css/yann.css
+++ b/public/css/yann.css
@@ -388,3 +388,10 @@ section.has-light-background, section.has-light-background h1, section.has-light
   position: relative;
   z-index: 1;
 }
+
+.mermaid {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: cadetblue;
+}
